<resources>
    <string name="doc_name">Doctor Name*</string>
    <string name="spec">Specialization*</string>
    <string name="mob_no">Mobile Number*</string>
    <string name="off_no">Office Contact*</string>
    <string name="address">Address*</string>
    <string name="city">City*</string>
    <string name="app_name">OPD</string>
    <string name="title_activity_navigation">MyOPD</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MyOPD</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_all_opd">AllOpdActivity</string>
    <string name="tab_text_1">Active</string>
    <string name="tab_text_2">Complete</string>
    <string name="tab_text_3">Closed</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
